--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "fe-router",
   "version": "1.0.2",
   "description": "This is a frontend router, include history and hash models.",
-  "main": "index.js",
+  "main": "./dist/fe-router.umd.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "rollup --config ./build/rollup.config.js -w"
   },
   "repository": {
     "type": "git",
@@ -22,6 +23,9 @@
   },
   "homepage": "https://github.com/palmerye/fe-router#readme",
   "devDependencies": {
-    "rollup": "^0.65.0"
+    "babel-core": "^6.26.3",
+    "babel-preset-es2015-rollup": "^3.0.0",
+    "rollup": "^0.65.0",
+    "rollup-plugin-babel": "^3.0.7"
   }
 }
